--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^2.3.0",
     "gsap": "^3.12.5",
     "nuxt": "^3.13.1",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
