--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/color-mode": "^3.4.0",
     "@nuxtjs/i18n": "^8.3.1",
+    "unhead": "^1.9.11",
     "flowbite": "^2.3.0",
     "gsap": "^3.12.5",
     "nuxt": "^3.20.1",
@@ -24,7 +25,7 @@
   "devDependencies": {
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/svg": "^0.4.1",
+    "@nuxtjs/svg": "^0.1.6",
     "autoprefixer": "^10.4.19",
     "nuxt-icon": "^0.6.10",
     "postcss": "^8.4.38",
