--- a/data/apps.json
+++ b/data/apps.json
@@ -1,32 +1,32 @@
 {
   "apps": [
     {
+      "id": "com.ixilabs.spixi.starwind-arena",
+      "name": "StarWind Arena",
+      "publisher": "IXI Labs",
+      "description": "Classic multi-player tanks game. Play with friends through Spixi.",
+      "category": "Games",
+      "featured": true,
+      "version": "1.0.0",
+      "icon": "https://apps.spixi.io/apps/com.ixilabs.spixi.starwind-arena.png",
+      "spixiUrl": "https://apps.spixi.io/apps/com.ixilabs.spixi.starwind-arena.spixi",
+      "github": "https://github.com/ixian-platform/Spixi-Mini-Apps/tree/master/apps/com.ixilabs.spixi.starwind-arena",
+      "singleUser": false,
+      "multiUser": true
+    },
+    {
       "id": "com.ixilabs.spixi.tictactoe",
       "name": "Tic-Tac-Toe",
       "publisher": "IXI Labs",
-      "description": "Classic multi-user Tic-Tac-Toe game. Play with friends in real-time through Spixi.",
+      "description": "Classic multi-player Tic-Tac-Toe game. Play with friends through Spixi.",
       "category": "Games",
       "featured": true,
-      "version": "1.0.6",
+      "version": "1.0.7",
       "icon": "https://apps.spixi.io/apps/com.ixilabs.spixi.tictactoe.png",
       "spixiUrl": "https://apps.spixi.io/apps/com.ixilabs.spixi.tictactoe.spixi",
       "github": "https://github.com/ixian-platform/Spixi-Mini-Apps/tree/master/apps/com.ixilabs.spixi.tictactoe",
       "singleUser": false,
       "multiUser": true
-    },
-    {
-      "id": "com.ixilabs.spixi.video-test",
-      "name": "Spixi Video Test",
-      "publisher": "IXI Labs",
-      "description": "Local video testing app for developers to test video functionality in Spixi Mini Apps.",
-      "category": "Dev Tools",
-      "featured": true,
-      "version": "0.1.0",
-      "icon": "https://apps.spixi.io/apps/com.ixilabs.spixi.video-test.png",
-      "spixiUrl": "https://apps.spixi.io/apps/com.ixilabs.spixi.video-test.spixi",
-      "github": "https://github.com/ixian-platform/Spixi-Mini-Apps/tree/master/apps/com.ixilabs.spixi.video-test",
-      "singleUser": true,
-      "multiUser": false
     },
     {
       "id": "com.ixilabs.spixi.whiteboard",
@@ -39,6 +39,20 @@
       "icon": "https://apps.spixi.io/apps/com.ixilabs.spixi.whiteboard.png",
       "spixiUrl": "https://apps.spixi.io/apps/com.ixilabs.spixi.whiteboard.spixi",
       "github": "https://github.com/ixian-platform/Spixi-Mini-Apps/tree/master/apps/com.ixilabs.spixi.whiteboard",
+      "singleUser": false,
+      "multiUser": true
+    },
+    {
+      "id": "com.ixilabs.spixi.mini-apps-test",
+      "name": "Mini Apps Test",
+      "publisher": "IXI Labs",
+      "description": "SDK testing and demo playground for developers building Spixi Mini Apps. Test storage, networking, and callbacks.",
+      "category": "Dev Tools",
+      "featured": true,
+      "version": "1.3.0",
+      "icon": "https://apps.spixi.io/apps/com.ixilabs.spixi.mini-apps-test.png",
+      "spixiUrl": "https://apps.spixi.io/apps/com.ixilabs.spixi.mini-apps-test.spixi",
+      "github": "https://github.com/ixian-platform/Spixi-Mini-Apps/tree/master/apps/com.ixilabs.spixi.mini-apps-test",
       "singleUser": false,
       "multiUser": true
     }
